tests/baselines/reference/comparisonOperatorWithInvalidOperand.errors.txt
comparisonOperatorWithInvalidOperand.ts(10,17): error TS2737: BigInt literals are not available when targeting lower than ES2020.
comparisonOperatorWithInvalidOperand.ts(14,11): error TS2737: BigInt literals are not available when targeting lower than ES2020.
comparisonOperatorWithInvalidOperand.ts(18,12): error TS2365: Operator '<' cannot be applied to types 'boolean' and 'boolean'.
comparisonOperatorWithInvalidOperand.ts(19,12): error TS2365: Operator '<' cannot be applied to types 'boolean' and 'number'.
comparisonOperatorWithInvalidOperand.ts(20,12): error TS2365: Operator '<' cannot be applied to types 'boolean' and 'string'.
comparisonOperatorWithInvalidOperand.ts(21,12): error TS2365: Operator '<' cannot be applied to types 'boolean' and 'Date'.
comparisonOperatorWithInvalidOperand.ts(22,12): error TS2365: Operator '<' cannot be applied to types 'boolean' and 'number[]'.
comparisonOperatorWithInvalidOperand.ts(23,12): error TS2365: Operator '<' cannot be applied to types 'boolean' and '{}'.
comparisonOperatorWithInvalidOperand.ts(24,12): error TS2365: Operator '<' cannot be applied to types 'boolean' and 'string[]'.
comparisonOperatorWithInvalidOperand.ts(25,12): error TS2365: Operator '<' cannot be applied to types 'boolean' and 'bigint'.
comparisonOperatorWithInvalidOperand.ts(26,12): error TS2365: Operator '<' cannot be applied to types 'boolean' and 'Number'.
comparisonOperatorWithInvalidOperand.ts(27,13): error TS2365: Operator '<' cannot be applied to types 'boolean' and 'any'.
comparisonOperatorWithInvalidOperand.ts(28,13): error TS2365: Operator '<' cannot be applied to types 'boolean' and 'number'.
comparisonOperatorWithInvalidOperand.ts(29,13): error TS2365: Operator '<' cannot be applied to types 'boolean' and 'bigint'.
comparisonOperatorWithInvalidOperand.ts(32,12): error TS2365: Operator '<' cannot be applied to types 'number' and 'string'.
comparisonOperatorWithInvalidOperand.ts(33,12): error TS2365: Operator '<' cannot be applied to types 'number' and 'Date'.
comparisonOperatorWithInvalidOperand.ts(34,12): error TS2365: Operator '<' cannot be applied to types 'number' and 'number[]'.
comparisonOperatorWithInvalidOperand.ts(35,12): error TS2365: Operator '<' cannot be applied to types 'number' and '{}'.
comparisonOperatorWithInvalidOperand.ts(36,12): error TS2365: Operator '<' cannot be applied to types 'number' and 'string[]'.
comparisonOperatorWithInvalidOperand.ts(38,12): error TS2365: Operator '<' cannot be applied to types 'number' and 'Number'.
comparisonOperatorWithInvalidOperand.ts(45,12): error TS2365: Operator '<' cannot be applied to types 'Date' and 'Date'.
comparisonOperatorWithInvalidOperand.ts(46,12): error TS2365: Operator '<' cannot be applied to types 'Date' and 'boolean'.
comparisonOperatorWithInvalidOperand.ts(50,12): error TS2365: Operator '>' cannot be applied to types 'boolean' and 'boolean'.
comparisonOperatorWithInvalidOperand.ts(51,12): error TS2365: Operator '>' cannot be applied to types 'boolean' and 'number'.
comparisonOperatorWithInvalidOperand.ts(52,12): error TS2365: Operator '>' cannot be applied to types 'boolean' and 'string'.
comparisonOperatorWithInvalidOperand.ts(53,12): error TS2365: Operator '>' cannot be applied to types 'boolean' and 'Date'.
comparisonOperatorWithInvalidOperand.ts(54,12): error TS2365: Operator '>' cannot be applied to types 'boolean' and 'number[]'.
comparisonOperatorWithInvalidOperand.ts(55,12): error TS2365: Operator '>' cannot be applied to types 'boolean' and '{}'.
comparisonOperatorWithInvalidOperand.ts(56,12): error TS2365: Operator '>' cannot be applied to types 'boolean' and 'string[]'.
comparisonOperatorWithInvalidOperand.ts(57,12): error TS2365: Operator '>' cannot be applied to types 'boolean' and 'bigint'.
comparisonOperatorWithInvalidOperand.ts(58,12): error TS2365: Operator '>' cannot be applied to types 'boolean' and 'Number'.
comparisonOperatorWithInvalidOperand.ts(59,13): error TS2365: Operator '>' cannot be applied to types 'boolean' and 'any'.
comparisonOperatorWithInvalidOperand.ts(60,13): error TS2365: Operator '>' cannot be applied to types 'boolean' and 'number'.
comparisonOperatorWithInvalidOperand.ts(61,13): error TS2365: Operator '>' cannot be applied to types 'boolean' and 'bigint'.
comparisonOperatorWithInvalidOperand.ts(64,12): error TS2365: Operator '>' cannot be applied to types 'number' and 'string'.
comparisonOperatorWithInvalidOperand.ts(65,12): error TS2365: Operator '>' cannot be applied to types 'number' and 'Date'.
comparisonOperatorWithInvalidOperand.ts(66,12): error TS2365: Operator '>' cannot be applied to types 'number' and 'number[]'.
comparisonOperatorWithInvalidOperand.ts(67,12): error TS2365: Operator '>' cannot be applied to types 'number' and '{}'.
comparisonOperatorWithInvalidOperand.ts(68,12): error TS2365: Operator '>' cannot be applied to types 'number' and 'string[]'.
comparisonOperatorWithInvalidOperand.ts(70,12): error TS2365: Operator '>' cannot be applied to types 'number' and 'Number'.
comparisonOperatorWithInvalidOperand.ts(77,12): error TS2365: Operator '>' cannot be applied to types 'Date' and 'Date'.
comparisonOperatorWithInvalidOperand.ts(78,12): error TS2365: Operator '>' cannot be applied to types 'Date' and 'boolean'.
comparisonOperatorWithInvalidOperand.ts(82,12): error TS2365: Operator '<=' cannot be applied to types 'boolean' and 'boolean'.
comparisonOperatorWithInvalidOperand.ts(83,12): error TS2365: Operator '<=' cannot be applied to types 'boolean' and 'number'.
comparisonOperatorWithInvalidOperand.ts(84,12): error TS2365: Operator '<=' cannot be applied to types 'boolean' and 'string'.
comparisonOperatorWithInvalidOperand.ts(85,12): error TS2365: Operator '<=' cannot be applied to types 'boolean' and 'Date'.
comparisonOperatorWithInvalidOperand.ts(86,12): error TS2365: Operator '<=' cannot be applied to types 'boolean' and 'number[]'.
comparisonOperatorWithInvalidOperand.ts(87,12): error TS2365: Operator '<=' cannot be applied to types 'boolean' and '{}'.
comparisonOperatorWithInvalidOperand.ts(88,12): error TS2365: Operator '<=' cannot be applied to types 'boolean' and 'string[]'.
comparisonOperatorWithInvalidOperand.ts(89,12): error TS2365: Operator '<=' cannot be applied to types 'boolean' and 'bigint'.
comparisonOperatorWithInvalidOperand.ts(90,12): error TS2365: Operator '<=' cannot be applied to types 'boolean' and 'Number'.
comparisonOperatorWithInvalidOperand.ts(91,13): error TS2365: Operator '<=' cannot be applied to types 'boolean' and 'any'.
comparisonOperatorWithInvalidOperand.ts(92,13): error TS2365: Operator '<=' cannot be applied to types 'boolean' and 'number'.
comparisonOperatorWithInvalidOperand.ts(93,13): error TS2365: Operator '<=' cannot be applied to types 'boolean' and 'bigint'.
comparisonOperatorWithInvalidOperand.ts(96,12): error TS2365: Operator '<=' cannot be applied to types 'number' and 'string'.
comparisonOperatorWithInvalidOperand.ts(97,12): error TS2365: Operator '<=' cannot be applied to types 'number' and 'Date'.
comparisonOperatorWithInvalidOperand.ts(98,12): error TS2365: Operator '<=' cannot be applied to types 'number' and 'number[]'.
comparisonOperatorWithInvalidOperand.ts(99,12): error TS2365: Operator '<=' cannot be applied to types 'number' and '{}'.
comparisonOperatorWithInvalidOperand.ts(100,12): error TS2365: Operator '<=' cannot be applied to types 'number' and 'string[]'.
comparisonOperatorWithInvalidOperand.ts(102,12): error TS2365: Operator '<=' cannot be applied to types 'number' and 'Number'.
comparisonOperatorWithInvalidOperand.ts(109,12): error TS2365: Operator '<=' cannot be applied to types 'Date' and 'Date'.
comparisonOperatorWithInvalidOperand.ts(110,12): error TS2365: Operator '<=' cannot be applied to types 'Date' and 'boolean'.
comparisonOperatorWithInvalidOperand.ts(114,12): error TS2365: Operator '>=' cannot be applied to types 'boolean' and 'boolean'.
comparisonOperatorWithInvalidOperand.ts(115,12): error TS2365: Operator '>=' cannot be applied to types 'boolean' and 'number'.
comparisonOperatorWithInvalidOperand.ts(116,12): error TS2365: Operator '>=' cannot be applied to types 'boolean' and 'string'.
comparisonOperatorWithInvalidOperand.ts(117,12): error TS2365: Operator '>=' cannot be applied to types 'boolean' and 'Date'.
comparisonOperatorWithInvalidOperand.ts(118,12): error TS2365: Operator '>=' cannot be applied to types 'boolean' and 'number[]'.
comparisonOperatorWithInvalidOperand.ts(119,12): error TS2365: Operator '>=' cannot be applied to types 'boolean' and '{}'.
comparisonOperatorWithInvalidOperand.ts(120,12): error TS2365: Operator '>=' cannot be applied to types 'boolean' and 'string[]'.
comparisonOperatorWithInvalidOperand.ts(121,12): error TS2365: Operator '>=' cannot be applied to types 'boolean' and 'bigint'.
comparisonOperatorWithInvalidOperand.ts(122,12): error TS2365: Operator '>=' cannot be applied to types 'boolean' and 'Number'.
comparisonOperatorWithInvalidOperand.ts(123,13): error TS2365: Operator '>=' cannot be applied to types 'boolean' and 'any'.
comparisonOperatorWithInvalidOperand.ts(124,13): error TS2365: Operator '>=' cannot be applied to types 'boolean' and 'number'.
comparisonOperatorWithInvalidOperand.ts(125,13): error TS2365: Operator '>=' cannot be applied to types 'boolean' and 'bigint'.
comparisonOperatorWithInvalidOperand.ts(128,12): error TS2365: Operator '>=' cannot be applied to types 'number' and 'string'.
comparisonOperatorWithInvalidOperand.ts(129,12): error TS2365: Operator '>=' cannot be applied to types 'number' and 'Date'.
comparisonOperatorWithInvalidOperand.ts(130,12): error TS2365: Operator '>=' cannot be applied to types 'number' and 'number[]'.
comparisonOperatorWithInvalidOperand.ts(131,12): error TS2365: Operator '>=' cannot be applied to types 'number' and '{}'.
comparisonOperatorWithInvalidOperand.ts(132,12): error TS2365: Operator '>=' cannot be applied to types 'number' and 'string[]'.
comparisonOperatorWithInvalidOperand.ts(134,12): error TS2365: Operator '>=' cannot be applied to types 'number' and 'Number'.
comparisonOperatorWithInvalidOperand.ts(141,12): error TS2365: Operator '>=' cannot be applied to types 'Date' and 'Date'.
comparisonOperatorWithInvalidOperand.ts(142,12): error TS2365: Operator '>=' cannot be applied to types 'Date' and 'boolean'.


==== comparisonOperatorWithInvalidOperand.ts (82 errors) ====
    // repro #15506
    // assumes that only valid comparisons are between anys, numbers and strings
    var a: boolean = false;
    var b: number = 0;
    var c: string = "";
    var d: Date = new Date();
    var e: number[] = [];
    var f: {} = {};
    var g: string[] = [];
    var h: bigint = 9007199254740991n;
                    ~~~~~~~~~~~~~~~~~
!!! error TS2737: BigInt literals are not available when targeting lower than ES2020.
    var i: Number = 0;
    var j: any;
    const k = 0;
    const l = 9007199254740991n;
              ~~~~~~~~~~~~~~~~~
!!! error TS2737: BigInt literals are not available when targeting lower than ES2020.
    
    // operator <
    // boolean
    var r1a1 = a < a;
               ~~~~~
!!! error TS2365: Operator '<' cannot be applied to types 'boolean' and 'boolean'.
    var r1a2 = a < b;
               ~~~~~
!!! error TS2365: Operator '<' cannot be applied to types 'boolean' and 'number'.
    var r1a3 = a < c;
               ~~~~~
!!! error TS2365: Operator '<' cannot be applied to types 'boolean' and 'string'.
    var r1a4 = a < d;
               ~~~~~
!!! error TS2365: Operator '<' cannot be applied to types 'boolean' and 'Date'.
    var r1a5 = a < e;
               ~~~~~
!!! error TS2365: Operator '<' cannot be applied to types 'boolean' and 'number[]'.
    var r1a6 = a < f;
               ~~~~~
!!! error TS2365: Operator '<' cannot be applied to types 'boolean' and '{}'.
    var r1a7 = a < g;
               ~~~~~
!!! error TS2365: Operator '<' cannot be applied to types 'boolean' and 'string[]'.
    var r1a8 = a < h;
               ~~~~~
!!! error TS2365: Operator '<' cannot be applied to types 'boolean' and 'bigint'.
    var r1a9 = a < i;
               ~~~~~
!!! error TS2365: Operator '<' cannot be applied to types 'boolean' and 'Number'.
    var r1a10 = a < j;
                ~~~~~
!!! error TS2365: Operator '<' cannot be applied to types 'boolean' and 'any'.
    var r1a11 = a < k;
                ~~~~~
!!! error TS2365: Operator '<' cannot be applied to types 'boolean' and 'number'.
    var r1a12 = a < l;
                ~~~~~
!!! error TS2365: Operator '<' cannot be applied to types 'boolean' and 'bigint'.
    
    // number
    var r1b1 = b < c;
               ~~~~~
!!! error TS2365: Operator '<' cannot be applied to types 'number' and 'string'.
    var r1b2 = b < d;
               ~~~~~
!!! error TS2365: Operator '<' cannot be applied to types 'number' and 'Date'.
    var r1b3 = b < e;
               ~~~~~
!!! error TS2365: Operator '<' cannot be applied to types 'number' and 'number[]'.
    var r1b4 = b < f;
               ~~~~~
!!! error TS2365: Operator '<' cannot be applied to types 'number' and '{}'.
    var r1b5 = b < g;
               ~~~~~
!!! error TS2365: Operator '<' cannot be applied to types 'number' and 'string[]'.
    var r1b6 = b < h;
    var r1b7 = b < i;
               ~~~~~
!!! error TS2365: Operator '<' cannot be applied to types 'number' and 'Number'.
    var r1b8 = b < j;
    var r1b9 = b < k;
    var r1b10 = b < l;
    var r1b11 = k < l;
    
    // Date
    var r1c1 = d < d;
               ~~~~~
!!! error TS2365: Operator '<' cannot be applied to types 'Date' and 'Date'.
    var r1c2 = d < a;
               ~~~~~
!!! error TS2365: Operator '<' cannot be applied to types 'Date' and 'boolean'.
    
    // operator >
    // boolean
    var r2a1 = a > a;
               ~~~~~
!!! error TS2365: Operator '>' cannot be applied to types 'boolean' and 'boolean'.
    var r2a2 = a > b;
               ~~~~~
!!! error TS2365: Operator '>' cannot be applied to types 'boolean' and 'number'.
    var r2a3 = a > c;
               ~~~~~
!!! error TS2365: Operator '>' cannot be applied to types 'boolean' and 'string'.
    var r2a4 = a > d;
               ~~~~~
!!! error TS2365: Operator '>' cannot be applied to types 'boolean' and 'Date'.
    var r2a5 = a > e;
               ~~~~~
!!! error TS2365: Operator '>' cannot be applied to types 'boolean' and 'number[]'.
    var r2a6 = a > f;
               ~~~~~
!!! error TS2365: Operator '>' cannot be applied to types 'boolean' and '{}'.
    var r2a7 = a > g;
               ~~~~~
!!! error TS2365: Operator '>' cannot be applied to types 'boolean' and 'string[]'.
    var r2a8 = a > h;
               ~~~~~
!!! error TS2365: Operator '>' cannot be applied to types 'boolean' and 'bigint'.
    var r2a9 = a > i;
               ~~~~~
!!! error TS2365: Operator '>' cannot be applied to types 'boolean' and 'Number'.
    var r2a10 = a > j;
                ~~~~~
!!! error TS2365: Operator '>' cannot be applied to types 'boolean' and 'any'.
    var r2a11 = a > k;
                ~~~~~
!!! error TS2365: Operator '>' cannot be applied to types 'boolean' and 'number'.
    var r2a12 = a > l;
                ~~~~~
!!! error TS2365: Operator '>' cannot be applied to types 'boolean' and 'bigint'.
    
    // number
    var r2b1 = b > c;
               ~~~~~
!!! error TS2365: Operator '>' cannot be applied to types 'number' and 'string'.
    var r2b2 = b > d;
               ~~~~~
!!! error TS2365: Operator '>' cannot be applied to types 'number' and 'Date'.
    var r2b3 = b > e;
               ~~~~~
!!! error TS2365: Operator '>' cannot be applied to types 'number' and 'number[]'.
    var r2b4 = b > f;
               ~~~~~
!!! error TS2365: Operator '>' cannot be applied to types 'number' and '{}'.
    var r2b5 = b > g;
               ~~~~~
!!! error TS2365: Operator '>' cannot be applied to types 'number' and 'string[]'.
    var r2b6 = b > h;
    var r2b7 = b > i;
               ~~~~~
!!! error TS2365: Operator '>' cannot be applied to types 'number' and 'Number'.
    var r2b8 = b > j;
    var r2b9 = b > k;
    var r2b10 = b > l;
    var r2b11 = k > l;
    
    // Date
    var r2c1 = d > d;
               ~~~~~
!!! error TS2365: Operator '>' cannot be applied to types 'Date' and 'Date'.
    var r2c2 = d > a;
               ~~~~~
!!! error TS2365: Operator '>' cannot be applied to types 'Date' and 'boolean'.
    
    // operator <=
    // boolean
    var r3a1 = a <= a;
               ~~~~~~
!!! error TS2365: Operator '<=' cannot be applied to types 'boolean' and 'boolean'.
    var r3a2 = a <= b;
               ~~~~~~
!!! error TS2365: Operator '<=' cannot be applied to types 'boolean' and 'number'.
    var r3a3 = a <= c;
               ~~~~~~
!!! error TS2365: Operator '<=' cannot be applied to types 'boolean' and 'string'.
    var r3a4 = a <= d;
               ~~~~~~
!!! error TS2365: Operator '<=' cannot be applied to types 'boolean' and 'Date'.
    var r3a5 = a <= e;
               ~~~~~~
!!! error TS2365: Operator '<=' cannot be applied to types 'boolean' and 'number[]'.
    var r3a6 = a <= f;
               ~~~~~~
!!! error TS2365: Operator '<=' cannot be applied to types 'boolean' and '{}'.
    var r3a7 = a <= g;
               ~~~~~~
!!! error TS2365: Operator '<=' cannot be applied to types 'boolean' and 'string[]'.
    var r3a8 = a <= h;
               ~~~~~~
!!! error TS2365: Operator '<=' cannot be applied to types 'boolean' and 'bigint'.
    var r3a9 = a <= i;
               ~~~~~~
!!! error TS2365: Operator '<=' cannot be applied to types 'boolean' and 'Number'.
    var r3a10 = a <= j;
                ~~~~~~
!!! error TS2365: Operator '<=' cannot be applied to types 'boolean' and 'any'.
    var r3a11 = a <= k;
                ~~~~~~
!!! error TS2365: Operator '<=' cannot be applied to types 'boolean' and 'number'.
    var r3a12 = a <= l;
                ~~~~~~
!!! error TS2365: Operator '<=' cannot be applied to types 'boolean' and 'bigint'.
    
    // number
    var r3b1 = b <= c;
               ~~~~~~
!!! error TS2365: Operator '<=' cannot be applied to types 'number' and 'string'.
    var r3b2 = b <= d;
               ~~~~~~
!!! error TS2365: Operator '<=' cannot be applied to types 'number' and 'Date'.
    var r3b3 = b <= e;
               ~~~~~~
!!! error TS2365: Operator '<=' cannot be applied to types 'number' and 'number[]'.
    var r3b4 = b <= f;
               ~~~~~~
!!! error TS2365: Operator '<=' cannot be applied to types 'number' and '{}'.
    var r3b5 = b <= g;
               ~~~~~~
!!! error TS2365: Operator '<=' cannot be applied to types 'number' and 'string[]'.
    var r3b6 = b <= h;
    var r3b7 = b <= i;
               ~~~~~~
!!! error TS2365: Operator '<=' cannot be applied to types 'number' and 'Number'.
    var r3b8 = b <= j;
    var r3b9 = b <= k;
    var r3b10 = b <= l;
    var r3b11 = k <= l;
    
    // Date
    var r3c1 = d <= d;
               ~~~~~~
!!! error TS2365: Operator '<=' cannot be applied to types 'Date' and 'Date'.
    var r3c2 = d <= a;
               ~~~~~~
!!! error TS2365: Operator '<=' cannot be applied to types 'Date' and 'boolean'.
    
    // operator >=
    // boolean
    var r4a1 = a >= a;
               ~~~~~~
!!! error TS2365: Operator '>=' cannot be applied to types 'boolean' and 'boolean'.
    var r4a2 = a >= b;
               ~~~~~~
!!! error TS2365: Operator '>=' cannot be applied to types 'boolean' and 'number'.
    var r4a3 = a >= c;
               ~~~~~~
!!! error TS2365: Operator '>=' cannot be applied to types 'boolean' and 'string'.
    var r4a4 = a >= d;
               ~~~~~~
!!! error TS2365: Operator '>=' cannot be applied to types 'boolean' and 'Date'.
    var r4a5 = a >= e;
               ~~~~~~
!!! error TS2365: Operator '>=' cannot be applied to types 'boolean' and 'number[]'.
    var r4a6 = a >= f;
               ~~~~~~
!!! error TS2365: Operator '>=' cannot be applied to types 'boolean' and '{}'.
    var r4a7 = a >= g;
               ~~~~~~
!!! error TS2365: Operator '>=' cannot be applied to types 'boolean' and 'string[]'.
    var r4a8 = a >= h;
               ~~~~~~
!!! error TS2365: Operator '>=' cannot be applied to types 'boolean' and 'bigint'.
    var r4a9 = a >= i;
               ~~~~~~
!!! error TS2365: Operator '>=' cannot be applied to types 'boolean' and 'Number'.
    var r4a10 = a >= j;
                ~~~~~~
!!! error TS2365: Operator '>=' cannot be applied to types 'boolean' and 'any'.
    var r4a11 = a >= k;
                ~~~~~~
!!! error TS2365: Operator '>=' cannot be applied to types 'boolean' and 'number'.
    var r4a12 = a >= l;
                ~~~~~~
!!! error TS2365: Operator '>=' cannot be applied to types 'boolean' and 'bigint'.
    
    // number
    var r4b1 = b >= c;
               ~~~~~~
!!! error TS2365: Operator '>=' cannot be applied to types 'number' and 'string'.
    var r4b2 = b >= d;
               ~~~~~~
!!! error TS2365: Operator '>=' cannot be applied to types 'number' and 'Date'.
    var r4b3 = b >= e;
               ~~~~~~
!!! error TS2365: Operator '>=' cannot be applied to types 'number' and 'number[]'.
    var r4b4 = b >= f;
               ~~~~~~
!!! error TS2365: Operator '>=' cannot be applied to types 'number' and '{}'.
    var r4b5 = b >= g;
               ~~~~~~
!!! error TS2365: Operator '>=' cannot be applied to types 'number' and 'string[]'.
    var r4b6 = b >= h;
    var r4b7 = b >= i;
               ~~~~~~
!!! error TS2365: Operator '>=' cannot be applied to types 'number' and 'Number'.
    var r4b8 = b >= j;
    var r4b9 = b >= k;
    var r4b10 = b >= l;
    var r4b11 = k >= l;
    
    // Date
    var r4c1 = d >= d;
               ~~~~~~
!!! error TS2365: Operator '>=' cannot be applied to types 'Date' and 'Date'.
    var r4c2 = d >= a;
               ~~~~~~
!!! error TS2365: Operator '>=' cannot be applied to types 'Date' and 'boolean'.
    